Add 401 and 403 codes for all CRUD APIs
